todo-app/backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      volumes:
        - name: todo
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-backend
          image: ruuskhis/todo-backend:1.3
          imagePullPolicy: Always
          volumeMounts:
            - name: todo
              mountPath: /usr/src/app/files
