todo-app/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend # This is the app as declared in the deployment.
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
