todo-app/backend/manifests/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: web
  clusterIP: None
  selector:
    app: postgresapp
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: postgres-ss
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
              #subPath: postgres
  volumeClaimTemplates:
    - metadata:
        namespace: project
        name: pgdata
      spec:
        accessModes: ['ReadWriteOnce']
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
